--- a/index.html
+++ b/index.html
@@ -5,13 +5,17 @@
     <title>Cipher</title>
   </head>
   <header>
+    <link rel="stylesheet" href="css/styles.css">
     <h1>Cipher</h1>
   </header>
   <body>
-    This text wil be ciphered by Ahmed and Andrew
+    This text wil be ciphered by Ahmed and Andrew "The GEEK"
+    <div class="image">
+    <img src="images/bro.jpg" alt="bro">
+    <img src="images/bro1.jpg" alt="bro1">
+  </div>
 
   </body>
-  <script type="text/javascript" src="js/scripts.js">
-
-  </script>
+  <script type="text/javascript" src="js/scripts.js"> </script>
+  <script type="text/javascript" src="js/jquery-3.1.1.js"> </script>
 </html>
